first-predeploy-github

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                 </div>
             </div>
-            
+
             <div class="row">
                 <div class="col">
                     <a href="/pages/skills.html">Habilidades</a>
@@ -68,19 +68,24 @@
 
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         <span class="badge badge-primary badge-pill">1.</span>&nbsp;
-                        Aprender nuevos lenguajes de programación.</li>
+                        Aprender nuevos lenguajes de programación.
+                    </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         <span class="badge badge-primary badge-pill">2.</span>&nbsp;
-                        Programación de proyectos personales.</li>
+                        Programación de proyectos personales.
+                    </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         <span class="badge badge-primary badge-pill">3.</span>&nbsp;
-                        Contribuir a proyectos de código abierto.</li>
+                        Contribuir a proyectos de código abierto.
+                    </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         <span class="badge badge-primary badge-pill">4.</span>&nbsp;
-                        Experimentar con hardware y proyectos de electrónica.</li>
+                        Experimentar con hardware y proyectos de electrónica.
+                    </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         <span class="badge badge-primary badge-pill">5.</span>&nbsp;
-                        Automatización de tareas cotidianas.</li>
+                        Automatización de tareas cotidianas.
+                    </li>
                 </ul>
             </div>
         </div>
@@ -106,7 +111,6 @@
                             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                 data-parent="#accordionExample">
                                 <div class="card-body">
-
                                     Mis palabras están imbuidas de convicción y empatía, permitiéndome presentar ideas
                                     de manera persuasiva y cautivadora, <strong>inspirando a otros a considerar nuevas
                                         perspectivas</strong>.
@@ -147,7 +151,6 @@
                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
                                 data-parent="#accordionExample">
                                 <div class="card-body">
-
                                     Mi mente creativa es un manantial inagotable de ideas frescas e innovadoras, lo que
                                     me permite abordar problemas desde ángulos únicos y ofrecer soluciones imaginativas.
 
@@ -168,8 +171,6 @@
                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
                                 data-parent="#accordionExample">
                                 <div class="card-body">
-
-
                                     Mi disposición a escuchar con atención y sin juicio brinda a cada individuo la
                                     seguridad de ser valorado y comprendido, estableciendo la base para una comunicación
                                     significativa.
@@ -191,9 +192,6 @@
                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
                                 data-parent="#accordionExample">
                                 <div class="card-body">
-
-
-
                                     Mi habilidad para articular una visión convincente y motivar a otros a unirse en la
                                     búsqueda de metas compartidas es un faro que guía hacia un futuro más brillante.
 
@@ -241,12 +239,6 @@
         </tbody>
     </table>
 
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
