--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
                         <div class="row">
                             <div class="col">
-                                <a href="/project0/pages/skills.html">Habilidades</a>
+                                <a href="/cs50w-project0/pages/skills.html">Habilidades</a>
 
                             </div>
                             <div class="col">
-                                <a href="/project0/pages/route.html">Trayecto</a>
+                                <a href="/cs50w-project0/pages/route.html">Trayecto</a>
                             </div>
                             <div class="col">
-                                <a href="/project0/pages/contact.html">Contacto</a>
+                                <a href="/cs50w-project0/pages/contact.html">Contacto</a>
                             </div>
                         </div>
                     </div>
